--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="javascript" href="index.js">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
-    <title>SPASZ</title>
+    <title>MASZK</title>
 </head>
 <body>
     Most épül, most épül
