--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 		<div class="center" align="center">
 			<h5>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSd47SNp3Oo64OXfRxPJXGgIG7s1KJFlty6qr7egm99-1ZyJDg/viewform?usp=sharing" target="_blank">Belépési nyilatkozat a MASZK-ba</a> </BR>
-                <a href="egyesulet/statuten.pdf" target="_blank">Alapító okirat (Statuten) PDF-ben.</a>
+                <a href="egyesulet/statuten-maszk.pdf" target="_blank">Alapító okirat (Statuten) PDF-ben.</a>
             </h5>
 		</div>
     </section>
