--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			
 			<DIV class="row">
 			<DIV class="column3" align="right">
-                2023. június 23 20:00<br/>
+                2023. október 6. 20:00<br/>
                 <a href="https://maps.app.goo.gl/63kjvnjmTaGVCzXo7" target="_blank">Quartierräume Bullinger</a><br/>
 				Bullingerstrasse 9<br/>
 				8004 Zürich
@@ -112,7 +112,7 @@
 			
 			<DIV class="row">
 			<DIV class="column3" align="right">
-                2023. június 23 20:00<br/>
+                2023. június 23. 20:00<br/>
                 <a href="https://goo.gl/maps/8CUGaV4YAL9GKufw5" target="_blank">Quartierzentrum Schütze</a><br/>
 				Heinrichstrasse 238<br/>
 				8005 Zürich
