--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="subtitle">
             <h2>Kapcsolat</h2>
         </div>
-        <div class="center"><h4>Vedd fel velünk a kapcsolatot <a href="mailto: maszk.ch@gmail.com" target="_blank">e-mailben.</a></h4></div>
+        <div class="center"><h4>A MASZK-kal kapcsolatos kérdésekkel, ajánlatokkal keresse Szabó Tímeát a <a href="mailto: maszk.ch@gmail.com" target="_blank">e-mail címen.</a></h4></div>
 		<div class="center"><h4>Jelenlétünk a közösségi médiában</h4></div>
 		<div class="center">
             <h5>
