--- a/index.html
+++ b/index.html
@@ -91,13 +91,26 @@
 		<h5>
 			<DIV class="row" >
 			<DIV class="column3" align="right">
-                2023. december 9.<br/>
+                2023. december 9. 18:30<br/>
+		<a href="https://maps.app.goo.gl/HhZs8eJ7tD67C7X4A" target="_blank">Szent István Magyar Katolikus Misszió</a><br/>
+			Winterthurerstrasse 135
+			8057 Zürich
 			</DIV>
 			<DIV class="column4">
-				A. Túri Zsuzsa</BR>verses est
+				<a href="https://fb.me/e/4UgDob3N4" target="_blank">A. Túri Zsuzsa</BR>verses est</a>
 			</DIV>
 			</DIV>
-			
+
+
+			<DIV class="row">
+			<DIV class="column3" align="right">
+                2023. december 1. 20:00<br/>
+			</DIV>
+			<DIV class="column4">
+				<a href="https://www.facebook.com/events/974029410350251/" target="_blank">Okuláré Projekt felolvasószínház | IKSZ
+			</DIV>
+			</DIV>
+	
 			<DIV class="row">
 			<DIV class="column3" align="right">
                 2023. október 6. 20:00<br/>
