--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 			<DIV class="column3" align="right">
                 2023. december 9. 18:30<br/>
 		<a href="https://maps.app.goo.gl/HhZs8eJ7tD67C7X4A" target="_blank">Szent István Magyar Katolikus Misszió</a><br/>
-			Winterthurerstrasse 135
+			Winterthurerstrasse 135<br/>
 			8057 Zürich
 			</DIV>
 			<DIV class="column4">
-				<a href="https://fb.me/e/4UgDob3N4" target="_blank">A. Túri Zsuzsa</BR>verses est</a>
+				<a href="https://fb.me/e/4UgDob3N4" target="_blank">Verses est A. Túri Zsuzsával</a>
 			</DIV>
 			</DIV>
 
