--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 2023. december 1. 20:00<br/>
 			</DIV>
 			<DIV class="column4">
-				<a href="https://www.facebook.com/events/974029410350251/" target="_blank">Okuláré Projekt felolvasószínház | IKSZ
+				Okuláré Projekt felolvasószínház | IKSZ
 			</DIV>
 			</DIV>
 	
