--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<DIV class="row" >
 			<DIV class="column3" align="right">
                 2023. december 9. 18:30<br/>
-		<a href="https://maps.app.goo.gl/HhZs8eJ7tD67C7X4A" target="_blank">Szent István Magyar Katolikus Misszió</a><br/>
+		<a href="https://maps.app.goo.gl/HhZs8eJ7tD67C7X4A" target="_blank">Szent István <br/>Magyar Katolikus Misszió</a><br/>
 			Winterthurerstrasse 135<br/>
 			8057 Zürich
 			</DIV>
