--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			8057 Zürich
 			</DIV>
 			<DIV class="column4">
-				<a href="https://fb.me/e/4UgDob3N4" target="_blank">Verses est A. Túri Zsuzsával</a>
+				<a href="https://fb.me/e/4UgDob3N4" target="_blank">Verses est A. Túri Zsuzsa <br/>költőnő verseiből és részvételével</a>
 			</DIV>
 			</DIV>
 
