--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 <link rel="shortcut icon" type="image/png" href="maszk.ico">
 <TITLE>MASZK</TITLE>
 <STYLE type="text/css">
-* {
-  box-sizing: border-box;
+* {box-sizing: border-box;}
+	
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  bgcolor: white;
+  text: black;
+  link: white;
+  vlink: white;
+  alink: white; 
 }
 
 .column1 {
@@ -58,8 +65,18 @@
 </STYLE type="text/css">
 </STYLE>
 </HEAD>
-<BODY bgcolor=white text=black link=white vlink=white alink=white >
+<BODY>
     <header>
+	<div class="header">
+		<a href="#default" class="logo"><img src="media/maszk.png" alt="MASZK" id="logo" width="300">MASZK</a>
+		<div class="header-right">
+			<a class="active" href="#home">Főoldal</a>
+			<a href="#musor">Műsor</a>
+             		<a href="#tarsulat">Társulatunk</a>
+              		<a href="#tamogatok">Támogatóknak</a>
+             		<a href="#kapcsolat">Kapcsolat</a>
+ 		 </div>
+	</div>
 	<DIV class="row">
 			<DIV class="column1">
             <img src="media/maszk.png" alt="MASZK" id="logo" width="300"> </br>
