--- a/index.html
+++ b/index.html
@@ -68,7 +68,16 @@ body {
 <BODY>
     <header>
 	<div class="header">
-		<a href="#default" class="logo"><img src="media/maszk.png" alt="MASZK" id="logo" width="300">MASZK</a>
+		<a href="#default" class="logo"><img src="media/maszk.png" alt="MASZK" id="logo" width="300"></a></br>
+                <a href="https://www.facebook.com/maszk.ch/" target="_blank">
+                    <img src="media/contact/fb-gold.png" alt="facebook" id="fb" width="80">
+                </a>
+                <a href="https://www.instagram.com/maszk.ch/" target="_blank">
+                    <img src="media/contact/ig-gold.png" alt="instagram" id="ig" width="80">
+                </a>
+                <a href="mailto:maszk.ch@gmail.com" target="_blank">
+                    <img src="media/contact/email-gold.png" alt="email" id="email" width="80">
+                </a>
 		<div class="header-right">
 			<a class="active" href="#home">Főoldal</a>
 			<a href="#musor">Műsor</a>
