--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ body {
 <BODY>
     <header>
 	<div class="header">
-		<a href="#default" class="logo"><img src="media/maszk.png" alt="MASZK" id="logo" width="300"></a></br>
+		<a href="#default" class="logo"><img src="media/maszk.png" alt="MASZK" id="logo" width="300"></a>
+</br>
                 <a href="https://www.facebook.com/maszk.ch/" target="_blank">
                     <img src="media/contact/fb-gold.png" alt="facebook" id="fb" width="80">
                 </a>
@@ -78,13 +79,14 @@ body {
                 <a href="mailto:maszk.ch@gmail.com" target="_blank">
                     <img src="media/contact/email-gold.png" alt="email" id="email" width="80">
                 </a>
-		<div class="header-right">
+	
+		<nav>
 			<a class="active" href="#home">Főoldal</a>
 			<a href="#musor">Műsor</a>
              		<a href="#tarsulat">Társulatunk</a>
               		<a href="#tamogatok">Támogatóknak</a>
              		<a href="#kapcsolat">Kapcsolat</a>
- 		 </div>
+ 		 </nav>
 	</div>
 	<DIV class="row">
 			<DIV class="column1">
