--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body {
 </HEAD>
 <BODY>
     <header>
-	<div class="header">
+	<nav>
 		<a href="#default" class="logo"><img src="media/maszk.png" alt="MASZK" id="logo" width="300"></a>
 </br>
                 <a href="https://www.facebook.com/maszk.ch/" target="_blank">
@@ -80,14 +80,14 @@ body {
                     <img src="media/contact/email-gold.png" alt="email" id="email" width="80">
                 </a>
 	
-		<nav>
-			<a class="active" href="#home">Főoldal</a>
-			<a href="#musor">Műsor</a>
-             		<a href="#tarsulat">Társulatunk</a>
-              		<a href="#tamogatok">Támogatóknak</a>
-             		<a href="#kapcsolat">Kapcsolat</a>
- 		 </nav>
-	</div>
+		<ul>
+			<li><a class="active" href="#home">Főoldal</a></li>
+			<li><a href="#musor">Műsor</a></li>
+             		<li><a href="#tarsulat">Társulatunk</a></li>
+              		<li><a href="#tamogatok">Támogatóknak</a></li>
+             		<li><a href="#kapcsolat">Kapcsolat</a></li>
+ 		 </ul>
+	</nav>
 	<DIV class="row">
 			<DIV class="column1">
             <img src="media/maszk.png" alt="MASZK" id="logo" width="300"> </br>
