--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body {
 	<nav>
 		<a href="#default" class="logo"><img src="media/maszk.png" alt="MASZK" id="logo" width="300"></a>	
 		<ul>
-			<li><a class="active" href="#home">Főoldal</a></li>
+			<li><a class="active" href="#home"></a></li>
 			<li><a href="#musor">Műsor</a></li>
              		<li><a href="#tarsulat">Társulatunk</a></li>
               		<li><a href="#tamogatok">Támogatóknak</a></li>
