--- a/index.html
+++ b/index.html
@@ -99,9 +99,12 @@ body {
 			<DIV class="row">
 			<DIV class="column3" align="right">
                 2023. december 1. 20:00<br/>
+	        <a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">Szent István <br/>Magyar Katolikus Misszió</a><br/>
+			Winterthurerstrasse 135<br/>
+			8057 Zürich
 			</DIV>
 			<DIV class="column4">
-				Okuláré Projekt felolvasószínház | IKSZ
+				<a href="https://fb.me/e/gvKK7YZKe" target="_blank">Okuláré Projekt felolvasószínház | IKSZ</a>
 			</DIV>
 			</DIV>
 	
