--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body {
 <BODY>
     <header>
 	<nav>
-		<a href="#default" class="logo"><img src="media/maszk.png" alt="MASZK" id="logo"></a>	
+		<a href="#default"><img src="media/maszk.png" alt="MASZK" id="logo"></a>	
 		<ul>
 			<li><a class="active" href="#home"></a></li>
 			<li><a href="#musor">Műsor</a></li>
