--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ body {
                 Instagram: 
                     <a href="https://www.instagram.com/maszk.ch/" target="_blank">instagram.com/maszk.ch</a><br/>
 				TikTok: 
-                    <a href="https://www.tiktok.com/@maszk.ch" target="_blank">tiktok.com/@maszk.ch</a><br/>
+                    <a href="https://www.tiktok.com/@maszk.ch" target="_blank">tiktok.com/&commat;maszk.ch</a><br/>
 				Twitter: 
                     <a href="https://twitter.com/maszk_ch" target="_blank">twitter.com/maszk_ch</a><br/>
             </h5>
@@ -214,7 +214,16 @@ body {
 			</DIV>
             </h5>
 		</div>
-		<div class="center"><h4>Elnökség</h4></div>
+		<div class="center" style="overflow-x:auto;">
+			<table>
+   				<tr><th colspan="2"><h4>Elnökség</h4></th></tr>
+    				<tr><td align="right">Elnök&colon;</td><td>Szabó Tímea</td></tr>
+				<tr><td align="right">Alelnök&colon;</td><td>Huterják-Szűcs Dóra</td></tr>
+				<tr><td align="right">Titkár&colon;</td><td>Livia da Costa Alves</td></tr>
+				<tr><td align="right">Pénztáros&colon;</td><td>Somogyvári Kristóf</td></tr>
+ 			</table>
+</div>
+		<div ></div>
 		<div class="center">
             <h5>
 				<DIV class="row">
