--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@ body {
             </h5>
 		</div>
 		<div class="center" style="overflow-x:auto;">
-			<table>
-   				<tr><th colspan="2"><h4>Elnökség</h4></th></tr>
+			<table align="center">
+   				<tr><th colspan="2" align="center"><h4>Elnökség</h4></th></tr>
     				<tr><td align="right">Elnök&colon;</td><td>Szabó Tímea</td></tr>
 				<tr><td align="right">Alelnök&colon;</td><td>Huterják-Szűcs Dóra</td></tr>
 				<tr><td align="right">Titkár&colon;</td><td>Livia da Costa Alves</td></tr>
