--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ body {
             </h5>
 		</div>
 		<div class="center" style="overflow-x:auto;">
-			<table align="center">
+			<table>
    				<tr><th colspan="2" align="center"><h4>Elnökség</h4></th></tr>
     				<tr><td align="right">Elnök&colon;</td><td>Szabó Tímea</td></tr>
 				<tr><td align="right">Alelnök&colon;</td><td>Huterják-Szűcs Dóra</td></tr>
