--- a/index.html
+++ b/index.html
@@ -193,26 +193,15 @@ body {
                     <a href="https://twitter.com/maszk_ch" target="_blank">twitter.com/maszk_ch</a><br/>
             </h5>
         </div>
-		<div class="center"><h4>Bankszámla adataink<h4></div>
-		<div class="center">
-            <h5>
-			<DIV class="row">
-			<DIV class="column3" align="right">
-                MASZK <br/>
-                IBAN:  <br/>
-                SWIFT:  <br/>
-                Strasse/Nr.: <br/>
-                PLZ/Ort:
-			</DIV>
-			<DIV class="column4">
-				</BR>
-				CH0680808007455441918</BR>
-				RAIFCH22XXX</BR>
-				Oechsli 10</BR>
-				8807 Freienbach
-			</DIV>
-			</DIV>
-            </h5>
+		<div class="center" style="overflow-x:auto;">
+			<table>
+   				<tr><th colspan="2" align="center"><h4>Bankszámla adataink<h4></th></tr>
+    				<tr><td colspan="2" align="center">MASZK</td></tr>
+				<tr><td align="right">IBAN&colon;</td><td>CH0680808007455441918</td></tr>
+				<tr><td align="right">SWIFT&colon;</td><td>RAIFCH22XXX</td></tr>
+				<tr><td align="right">Strasse/Nr.&colon;</td><td>Oechsli 10</td></tr>
+				<tr><td align="right">PLZ/Ort:&colon;</td><td>8807 Freienbach</td></tr>
+ 			</table>
 		</div>
 		<div class="center" style="overflow-x:auto;">
 			<table>
@@ -222,7 +211,7 @@ body {
 				<tr><td align="right">Titkár&colon;</td><td>Livia da Costa Alves</td></tr>
 				<tr><td align="right">Pénztáros&colon;</td><td>Somogyvári Kristóf</td></tr>
  			</table>
-</div>
+		</div>
 		<div ></div>
 		<div class="center">
             <h5>
