--- a/index.html
+++ b/index.html
@@ -194,18 +194,18 @@ body {
             </h5>
         </div>
 		<div class="center" style="overflow-x:auto;">
-			<table>
-   				<tr><th colspan="2" align="center"><h4>Bankszámla adataink<h4></th></tr>
-    				<tr><td colspan="2" align="center">MASZK</td></tr>
+			<table class="center">
+   				<tr><th colspan="2" text-align="center"><h4>Bankszámla adataink<h4></th></tr>
+    				<tr><td colspan="2" text-align="center">MASZK</td></tr>
 				<tr><td align="right">IBAN&colon;</td><td>CH0680808007455441918</td></tr>
 				<tr><td align="right">SWIFT&colon;</td><td>RAIFCH22XXX</td></tr>
 				<tr><td align="right">Strasse/Nr.&colon;</td><td>Oechsli 10</td></tr>
-				<tr><td align="right">PLZ/Ort:&colon;</td><td>8807 Freienbach</td></tr>
+				<tr><td align="right">PLZ/Ort&colon;</td><td>8807 Freienbach</td></tr>
  			</table>
 		</div>
 		<div class="center" style="overflow-x:auto;">
-			<table>
-   				<tr><th colspan="2" align="center"><h4>Elnökség</h4></th></tr>
+			<table class="center">
+   				<tr><th colspan="2" text-align="center"><h4>Elnökség</h4></th></tr>
     				<tr><td align="right">Elnök&colon;</td><td>Szabó Tímea</td></tr>
 				<tr><td align="right">Alelnök&colon;</td><td>Huterják-Szűcs Dóra</td></tr>
 				<tr><td align="right">Titkár&colon;</td><td>Livia da Costa Alves</td></tr>
