--- a/index.html
+++ b/index.html
@@ -195,21 +195,21 @@ body {
         </div>
 		<div class="center" style="overflow-x:auto;">
 			<table class="center">
-   				<tr><th colspan="2" text-align="center"><h4>Bankszámla adataink<h4></th></tr>
-    				<tr><td colspan="2" text-align="center">MASZK</td></tr>
-				<tr><td align="right">IBAN&colon;</td><td>CH0680808007455441918</td></tr>
-				<tr><td align="right">SWIFT&colon;</td><td>RAIFCH22XXX</td></tr>
-				<tr><td align="right">Strasse/Nr.&colon;</td><td>Oechsli 10</td></tr>
-				<tr><td align="right">PLZ/Ort&colon;</td><td>8807 Freienbach</td></tr>
+   				<tr><th colspan="2" align="center"><h4>Bankszámla adataink<h4></th></tr>
+    				<tr><td colspan="2" align="center">MASZK</td></tr>
+				<tr><td align="right">IBAN&colon;&nbsp;</td><td>CH0680808007455441918</td></tr>
+				<tr><td align="right">SWIFT&colon;&nbsp;</td><td>RAIFCH22XXX</td></tr>
+				<tr><td align="right">Strasse/Nr.&colon;&nbsp;</td><td>Oechsli 10</td></tr>
+				<tr><td align="right">PLZ/Ort&colon;&nbsp;</td><td>8807 Freienbach</td></tr>
  			</table>
 		</div>
 		<div class="center" style="overflow-x:auto;">
 			<table class="center">
-   				<tr><th colspan="2" text-align="center"><h4>Elnökség</h4></th></tr>
-    				<tr><td align="right">Elnök&colon;</td><td>Szabó Tímea</td></tr>
-				<tr><td align="right">Alelnök&colon;</td><td>Huterják-Szűcs Dóra</td></tr>
-				<tr><td align="right">Titkár&colon;</td><td>Livia da Costa Alves</td></tr>
-				<tr><td align="right">Pénztáros&colon;</td><td>Somogyvári Kristóf</td></tr>
+   				<tr><th colspan="2" align="center"><h4>Elnökség</h4></th></tr>
+    				<tr><td align="right">Elnök&colon;&nbsp;</td><td>Szabó Tímea</td></tr>
+				<tr><td align="right">Alelnök&colon;&nbsp;</td><td>Huterják-Szűcs Dóra</td></tr>
+				<tr><td align="right">Titkár&colon;&nbsp;</td><td>Livia da Costa Alves</td></tr>
+				<tr><td align="right">Pénztáros&colon;&nbsp;</td><td>Somogyvári Kristóf</td></tr>
  			</table>
 		</div>
 		<div ></div>
