--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ body {
 		<div class="center" style="overflow-x:auto;">
 			<table class="center">
    				<tr><th colspan="2" align="center"><h4>Bankszámla adataink<h4></th></tr>
-    				<tr><td colspan="2" align="center">MASZK</td></tr>
+				<tr><td align="right">Kedvezményezett neve&colon;&nbsp;</td><td>MASZK</td></tr>
 				<tr><td align="right">IBAN&colon;&nbsp;</td><td>CH0680808007455441918</td></tr>
 				<tr><td align="right">SWIFT&colon;&nbsp;</td><td>RAIFCH22XXX</td></tr>
 				<tr><td align="right">Strasse/Nr.&colon;&nbsp;</td><td>Oechsli 10</td></tr>
