--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ body {
         </div>
 		<div class="center" style="overflow-x:auto;">
 			<table class="center">
-   				<tr><th colspan="2" align="center"><h4>Bankszámla adataink<h4></th></tr>
+   				<tr><th colspan="2">Bankszámla adataink</th></tr>
 				<tr><td align="right">Kedvezményezett&colon;&nbsp;</td><td>MASZK</td></tr>
 				<tr><td align="right">IBAN&colon;&nbsp;</td><td>CH0680808007455441918</td></tr>
 				<tr><td align="right">SWIFT&colon;&nbsp;</td><td>RAIFCH22XXX</td></tr>
@@ -205,11 +205,11 @@ body {
 		</div>
 		<div class="center" style="overflow-x:auto;">
 			<table class="center">
-   				<tr><th colspan="2" align="center"><h4>Elnökség</h4></th></tr>
-    				<tr><td align="right">Elnök&colon;&nbsp;</td><td>Szabó Tímea</td></tr>
-				<tr><td align="right">Alelnök&colon;&nbsp;</td><td>Huterják-Szűcs Dóra</td></tr>
-				<tr><td align="right">Titkár&colon;&nbsp;</td><td>Livia da Costa Alves</td></tr>
-				<tr><td align="right">Pénztáros&colon;&nbsp;</td><td>Somogyvári Kristóf</td></tr>
+   				<tr><th colspan="2">Elnökség</th></tr>
+    				<tr><td class="right">Elnök&colon;&nbsp;</td><td>Szabó Tímea</td></tr>
+				<tr><td class="right">Alelnök&colon;&nbsp;</td><td>Huterják-Szűcs Dóra</td></tr>
+				<tr><td class="right">Titkár&colon;&nbsp;</td><td>Livia da Costa Alves</td></tr>
+				<tr><td class="right">Pénztáros&colon;&nbsp;</td><td>Somogyvári Kristóf</td></tr>
  			</table>
 		</div>
 		<div class="center" align="center">
