--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@ body {
 		<div class="center" style="overflow-x:auto;">
 			<table class="center">
    				<tr><th colspan="2">Bankszámla adataink</th></tr>
-				<tr><td align="right">Kedvezményezett&colon;&nbsp;</td><td>MASZK</td></tr>
-				<tr><td align="right">IBAN&colon;&nbsp;</td><td>CH0680808007455441918</td></tr>
-				<tr><td align="right">SWIFT&colon;&nbsp;</td><td>RAIFCH22XXX</td></tr>
-				<tr><td align="right">Strasse/Nr.&colon;&nbsp;</td><td>Oechsli 10</td></tr>
-				<tr><td align="right">PLZ/Ort&colon;&nbsp;</td><td>8807 Freienbach</td></tr>
+				<tr><td class="right">Kedvezményezett&colon;&nbsp;</td><td>MASZK</td></tr>
+				<tr><td class="right">IBAN&colon;&nbsp;</td><td>CH0680808007455441918</td></tr>
+				<tr><td class="right">SWIFT&colon;&nbsp;</td><td>RAIFCH22XXX</td></tr>
+				<tr><td class="right">Strasse/Nr.&colon;&nbsp;</td><td>Oechsli 10</td></tr>
+				<tr><td class="right">PLZ/Ort&colon;&nbsp;</td><td>8807 Freienbach</td></tr>
  			</table>
 		</div>
 		<div class="center" style="overflow-x:auto;">
