--- a/index.html
+++ b/index.html
@@ -78,22 +78,18 @@ body {
 	</nav>
     </header>
     <section id="musor">
-		<div class="subtitle">
+	<div class="subtitle">
             <h2>Műsoraink</h2>
         </div>
-		<div class="center">
-		<h5>
-			<DIV class="row" >
-			<DIV class="column3" align="right">
-                2023. december 9. 18:30<br>
-		<a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">Szent István <br>Magyar Katolikus Misszió</a><br>
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+    			<tr><td class="right">2023. december 9. 18:30</td><td><a href="https://fb.me/e/4UgDob3N4" target="_blank">Verses est A. Túri Zsuzsa <br>költőnő verseiből és részvételével</a></td></tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">Szent István <br>Magyar Katolikus Misszió</a><br>
 			Winterthurerstrasse 135<br>
 			8057 Zürich
-			</DIV>
-			<DIV class="column4">
-				<a href="https://fb.me/e/4UgDob3N4" target="_blank">Verses est A. Túri Zsuzsa <br>költőnő verseiből és részvételével</a>
-			</DIV>
-			</DIV>
+				</td><td></td></tr>
+ 			</table>
+		</div>
 
 
 			<DIV class="row">
@@ -212,7 +208,7 @@ body {
 				<tr><td class="right">Pénztáros&colon;&nbsp;</td><td>Somogyvári Kristóf</td></tr>
  			</table>
 		</div>
-		<div class="center" align="center">
+		<div class="center">
 			<h5>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSd47SNp3Oo64OXfRxPJXGgIG7s1KJFlty6qr7egm99-1ZyJDg/viewform?usp=sharing" target="_blank">Belépési nyilatkozat a MASZK-ba</a> <br>
                 <a href="media/egyesulet/statuten-maszk.pdf" target="_blank">Alapító okirat (Statuten) PDF-ben.</a>
