--- a/index.html
+++ b/index.html
@@ -148,24 +148,15 @@ body {
         <div class="subtitle">
             <h2>Támogatóknak</h2>
         </div>
-		<div class="center">
-		
-			<div class="row">
-				<div class="column3">
-					<h4 style="text-align:center">
-						<a href="#kapcsolat"><img alt="banki utalás" src="media/tamogatok/bank-qr.png" width="60%" /><br>
-						Banki utalás</a>
-					</h4>
-				</div>
-				<div class="column4">
-					<h4 style="text-align:center">
-						<a href="https://pay.raisenow.io/phsrh" target="_blank"><img alt="twintes támogatás" src="media/tamogatok/twint-qr.png" width="60%"/><br>
-						Twint</a>
-					</h4>
-					
-				</div>
-			</div>
-		</div>
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+			<tr><td><a href="#kapcsolat"><img alt="banki utalás" src="media/tamogatok/bank-qr.png"/></a></td>
+			    <td><a href="https://pay.raisenow.io/phsrh" target="_blank"><img alt="twintes támogatás" src="media/tamogatok/twint-qr.png"/></a></td>
+			</tr>
+			<tr><td><a href="#kapcsolat">Banki utalás</a></td>
+			    <td><a href="https://pay.raisenow.io/phsrh" target="_blank">Twint</a></td></tr>
+ 		</table>
+	</div>
         <h5 style="text-align:center">
             Ha más módon szeretnél támogatni, elérhetőségeinket <a href="#kapcsolat">ITT</a> találod.
         </h5>
