--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ body {
         </div>
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
-    			<tr><td class="right">2023. december 9. 18:30</td><td><a href="https://fb.me/e/4UgDob3N4" target="_blank">Verses est A. Túri Zsuzsa <br>költőnő verseiből és részvételével</a></td></tr>
-			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">Szent István <br>Magyar Katolikus Misszió</a><br>
-			Winterthurerstrasse 135<br>
-			8057 Zürich
+    			<tr><td class="right">2023. december 9. 18:30&nbsp;</td><td><a href="https://fb.me/e/4UgDob3N4" target="_blank">Verses est A. Túri Zsuzsa <br>költőnő verseiből és részvételével</a></td></tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">Szent István Magyar Katolikus Misszió&nbsp;</a><br>
+			Winterthurerstrasse 135&nbsp;<br>
+			8057 Zürich&nbsp;
 				</td><td></td></tr>
  			</table>
 		</div>
