--- a/index.html
+++ b/index.html
@@ -83,65 +83,73 @@ body {
         </div>
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
-    			<tr><td class="right">2023. december 9. 18:30&nbsp;</td><td><a href="https://fb.me/e/4UgDob3N4" target="_blank">Verses est A. Túri Zsuzsa <br>költőnő verseiből és részvételével</a></td></tr>
-			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">Szent István Magyar Katolikus Misszió&nbsp;</a><br>
-			Winterthurerstrasse 135&nbsp;<br>
-			8057 Zürich&nbsp;
-				</td><td></td></tr>
- 			</table>
-		</div>
+    			<tr><td class="right">2023. december 9. 18:30&nbsp;</td>
+			    <td><a href="https://fb.me/e/4UgDob3N4" target="_blank">
+				Verses est A. Túri Zsuzsa <br>költőnő verseiből és részvételével</a></td>
+			</tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
+				Szent István&nbsp;<br>
+				Magyar Katolikus Misszió&nbsp;</a><br>
+				Winterthurerstrasse 135&nbsp;<br>
+				8057 Zürich&nbsp;</td>
+			    <td></td>
+			</tr>
+ 		</table>
 
+		<table class="center">
+    			<tr><td class="right">2023. december 1. 20:00&nbsp;</td>
+			    <td><a href="https://fb.me/e/gvKK7YZKe" target="_blank">
+				Okuláré Projekt felolvasószínház | IKSZ</a></td>
+			</tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
+				Szent István&nbsp;<br>
+				Magyar Katolikus Misszió&nbsp;</a><br>
+				Winterthurerstrasse 135&nbsp;<br>
+				8057 Zürich&nbsp;</td>
+			    <td></td>
+			</tr>
+ 		</table>
 
-			<DIV class="row">
-			<DIV class="column3" align="right">
-                2023. december 1. 20:00<br>
-	        <a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">Szent István <br>Magyar Katolikus Misszió</a><br>
-			Winterthurerstrasse 135<br>
-			8057 Zürich
-			</DIV>
-			<DIV class="column4">
-				<a href="https://fb.me/e/gvKK7YZKe" target="_blank">Okuláré Projekt felolvasószínház | IKSZ</a>
-			</DIV>
-			</DIV>
-	
-			<DIV class="row">
-			<DIV class="column3" align="right">
-                2023. október 6. 20:00<br>
-                <a href="https://maps.app.goo.gl/63kjvnjmTaGVCzXo7" target="_blank">Quartierräume Bullinger</a><br>
-				Bullingerstrasse 9<br>
-				8004 Zürich
-			</DIV>
-			<DIV class="column4">
-				<a href="https://www.facebook.com/events/974029410350251/" target="_blank">Okuláré Projekt felolvasószínház | Kelet</a>
-			</DIV>
-			</DIV>
-			
-			<DIV class="row">
-			<DIV class="column3" align="right">
-                2023. június 23. 20:00<br>
-                <a href="https://goo.gl/maps/8CUGaV4YAL9GKufw5" target="_blank">Quartierzentrum Schütze</a><br>
-				Heinrichstrasse 238<br>
-				8005 Zürich
-			</DIV>
-			<DIV class="column4">
-				<a href="https://www.facebook.com/events/293158013053079/" target="_blank">Okuláré Projekt felolvasószínház | Visszaszámlálás</a>
-			</DIV>
-			</DIV>
-			
-			<DIV class="row">
-			<DIV class="column3" align="right">
-                2023. június 16. 18:00<br>
-                <a href="https://maps.app.goo.gl/R2ofVbjwV5a7WSnp8" target="_blank">Charlotte Bakery</a><br>
-                General-Wille Strasse 11 <br>
-                8002 Zürich
-			</DIV>
-			<DIV class="column4">
-				<a href="https://www.facebook.com/events/174428348684282/" target="_blank">Jó estét nyár, viszlát Charlotte! </a><br>
-				cukrászdabúcsúztató verses est
-			</DIV>
-			</DIV>
-         </h5>
-		</div>
+		<table class="center">
+    			<tr><td class="right">2023. október 6. 20:00&nbsp;</td>
+			    <td><a href="https://www.facebook.com/events/974029410350251/" target="_blank">
+				Okuláré Projekt felolvasószínház | Kelet</a></td>
+			</tr>
+			<tr><td class="right"><a href="https://maps.app.goo.gl/63kjvnjmTaGVCzXo7" target="_blank">
+				Quartierräume Bullinger</a>&nbsp;<br>
+				Bullingerstrasse 9&nbsp;<br>
+				8004 Zürich&nbsp;</td>
+			    <td></td>
+			</tr>
+ 		</table>
+
+		<table class="center">
+    			<tr><td class="right">2023. június 23. 20:00&nbsp;</td>
+			    <td><a href="https://www.facebook.com/events/293158013053079/" target="_blank">
+				Okuláré Projekt felolvasószínház | Visszaszámlálás</a></td>
+			</tr>
+			<tr><td class="right"><a href="https://goo.gl/maps/8CUGaV4YAL9GKufw5" target="_blank">
+				Quartierzentrum Schütze</a>&nbsp;<br>
+				Heinrichstrasse 238&nbsp;<br>
+				8005 Zürich&nbsp;</td>
+			    <td></td>
+			</tr>
+ 		</table>
+
+		<table class="center">
+    			<tr><td class="right">2023. június 16. 18:00&nbsp;</td>
+			    <td><a href="https://www.facebook.com/events/174428348684282/" target="_blank">
+				Jó estét nyár, viszlát Charlotte!<br>
+				cukrászdabúcsúztató verses est</a></td>
+			</tr>
+			<tr><a href="https://maps.app.goo.gl/R2ofVbjwV5a7WSnp8" target="_blank">
+				Charlotte Bakery</a>&nbsp;<br>
+				General-Wille Strasse 11&nbsp;<br>
+				8002 Zürich&nbsp;</td>
+			    <td></td>
+			</tr>
+ 		</table>
+	</div>
     </section>
 	
     <section id="tamogatok">
