--- a/index.html
+++ b/index.html
@@ -158,8 +158,10 @@ body {
         </div>
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
-			<tr><td><a href="#kapcsolat"><img alt="banki utalás" src="media/tamogatok/bank-qr.png"/></a></td>
-			    <td><a href="https://pay.raisenow.io/phsrh" target="_blank"><img alt="twintes támogatás" src="media/tamogatok/twint-qr.png"/></a></td>
+			<tr><td><a href="#kapcsolat">
+				<img alt="banki utalás" src="media/tamogatok/bank-qr.png" width="200px"/></a></td>
+			    <td><a href="https://pay.raisenow.io/phsrh" target="_blank">
+				<img alt="twintes támogatás" src="media/tamogatok/twint-qr.png" width="200px"/></a></td>
 			</tr>
 			<tr><td><a href="#kapcsolat">Banki utalás</a></td>
 			    <td><a href="https://pay.raisenow.io/phsrh" target="_blank">Twint</a></td></tr>
