--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				Jó estét nyár, viszlát Charlotte!<br>
 				cukrászdabúcsúztató verses est</a></td>
 			</tr>
-			<tr><a href="https://maps.app.goo.gl/R2ofVbjwV5a7WSnp8" target="_blank">
+			<tr><td class="right"><a href="https://maps.app.goo.gl/R2ofVbjwV5a7WSnp8" target="_blank">
 				Charlotte Bakery</a>&nbsp;<br>
 				General-Wille Strasse 11&nbsp;<br>
 				8002 Zürich&nbsp;</td>
