--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
         </div>
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
-			<tr><td><a href="#kapcsolat">
+			<tr><td class="center"><a href="#kapcsolat">
 				<img alt="banki utalás" src="media/tamogatok/bank-qr.png" width="200px"/></a></td>
-			    <td><a href="https://pay.raisenow.io/phsrh" target="_blank">
+			    <td class="center"><a href="https://pay.raisenow.io/phsrh" target="_blank">
 				<img alt="twintes támogatás" src="media/tamogatok/twint-qr.png" width="200px"/></a></td>
 			</tr>
-			<tr><td><a href="#kapcsolat">Banki utalás</a></td>
-			    <td><a href="https://pay.raisenow.io/phsrh" target="_blank">Twint</a></td></tr>
+			<tr><td class="center"><a href="#kapcsolat">Banki utalás</a></td>
+			    <td class="center"><a href="https://pay.raisenow.io/phsrh" target="_blank">Twint</a></td></tr>
  		</table>
 	</div>
         <h5 style="text-align:center">
