--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<table class="center">
     			<tr><td class="right">2023. december 9. 18:30&nbsp;</td>
 			    <td><a href="https://fb.me/e/4UgDob3N4" target="_blank">
-				Verses est A. Túri Zsuzsa <br>költőnő verseiből és részvételével</a></td>
+				Verses est A. Túri Zsuzsa költőnő verseiből és részvételével</a></td>
 			</tr>
 			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
 				Szent István&nbsp;<br>
@@ -139,8 +139,7 @@
 		<table class="center">
     			<tr><td class="right">2023. június 16. 18:00&nbsp;</td>
 			    <td><a href="https://www.facebook.com/events/174428348684282/" target="_blank">
-				Jó estét nyár, viszlát Charlotte!<br>
-				cukrászdabúcsúztató verses est</a></td>
+				Jó estét nyár, viszlát Charlotte! cukrászdabúcsúztató verses est</a></td>
 			</tr>
 			<tr><td class="right"><a href="https://maps.app.goo.gl/R2ofVbjwV5a7WSnp8" target="_blank">
 				Charlotte Bakery</a>&nbsp;<br>
