--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
     			<tr><td class="right">2023. december 9. 18:30&nbsp;</td>
-			    <td><a href="https://fb.me/e/4UgDob3N4" target="_blank">
+			    <td rowspan="2"><a href="https://fb.me/e/4UgDob3N4" target="_blank">
 				Verses est A. Túri Zsuzsa költőnő verseiből és részvételével</a></td>
 			</tr>
 			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
