--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
     			<tr><td class="right">2023. december 1. 20:00&nbsp;</td>
-			    <td><a href="https://fb.me/e/gvKK7YZKe" target="_blank">
+			    <td rowspan="2"><a href="https://fb.me/e/gvKK7YZKe" target="_blank">
 				Okuláré Projekt felolvasószínház | IKSZ</a></td>
 			</tr>
 			<tr><td class="right"><a href="https://maps.app.goo.gl/ekrVzPiSwXWYf9sm6" target="_blank">
@@ -108,7 +108,7 @@
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
     			<tr><td class="right">2023. október 6. 20:00&nbsp;</td>
-			    <td><a href="https://www.facebook.com/events/974029410350251/" target="_blank">
+			    <td rowspan="2"><a href="https://www.facebook.com/events/974029410350251/" target="_blank">
 				Okuláré Projekt felolvasószínház | Kelet</a></td>
 			</tr>
 			<tr><td class="right"><a href="https://maps.app.goo.gl/63kjvnjmTaGVCzXo7" target="_blank">
@@ -123,7 +123,7 @@
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
     			<tr><td class="right">2023. június 23. 20:00&nbsp;</td>
-			    <td><a href="https://www.facebook.com/events/293158013053079/" target="_blank">
+			    <td rowspan="2"><a href="https://www.facebook.com/events/293158013053079/" target="_blank">
 				Okuláré Projekt felolvasószínház | Visszaszámlálás</a></td>
 			</tr>
 			<tr><td class="right"><a href="https://goo.gl/maps/8CUGaV4YAL9GKufw5" target="_blank">
@@ -138,7 +138,7 @@
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
     			<tr><td class="right">2023. június 16. 18:00&nbsp;</td>
-			    <td><a href="https://www.facebook.com/events/174428348684282/" target="_blank">
+			    <td rowspan="2"><a href="https://www.facebook.com/events/174428348684282/" target="_blank">
 				Jó estét nyár, viszlát Charlotte! cukrászdabúcsúztató verses est</a></td>
 			</tr>
 			<tr><td class="right"><a href="https://maps.app.goo.gl/R2ofVbjwV5a7WSnp8" target="_blank">
