--- a/index.html
+++ b/index.html
@@ -175,45 +175,46 @@
         <div class="subtitle">
             <h2>Kapcsolat</h2>
         </div>
-        <div class="center"><h4>A MASZK-kal kapcsolatos kérdésekkel, ajánlatokkal keresse Szabó Tímeát a <a href="mailto: maszk.ch@gmail.com" target="_blank">e-mail címen.</a></h4></div>
-		<div class="center"><h4>Jelenlétünk a közösségi médiában</h4></div>
-		<div class="center">
-            <h5>
-                Facebook: 
-                    <a href="https://www.facebook.com/maszk.ch/" target="_blank">fb.com/maszk.ch</a><br>
-                Instagram: 
-                    <a href="https://www.instagram.com/maszk.ch/" target="_blank">instagram.com/maszk.ch</a><br>
-				TikTok: 
-                    <a href="https://www.tiktok.com/@maszk.ch" target="_blank">tiktok.com/&commat;maszk.ch</a><br>
-				Twitter: 
-                    <a href="https://twitter.com/maszk_ch" target="_blank">twitter.com/maszk_ch</a><br>
-            </h5>
-        </div>
-		<div class="center" style="overflow-x:auto;">
-			<table class="center">
-   				<tr><th colspan="2">Bankszámla adataink</th></tr>
-				<tr><td class="right">Kedvezményezett&colon;&nbsp;</td><td>MASZK</td></tr>
-				<tr><td class="right">IBAN&colon;&nbsp;</td><td>CH0680808007455441918</td></tr>
-				<tr><td class="right">SWIFT&colon;&nbsp;</td><td>RAIFCH22XXX</td></tr>
-				<tr><td class="right">Strasse/Nr.&colon;&nbsp;</td><td>Oechsli 10</td></tr>
-				<tr><td class="right">PLZ/Ort&colon;&nbsp;</td><td>8807 Freienbach</td></tr>
- 			</table>
-		</div>
-		<div class="center" style="overflow-x:auto;">
-			<table class="center">
-   				<tr><th colspan="2">Elnökség</th></tr>
-    				<tr><td class="right">Elnök&colon;&nbsp;</td><td>Szabó Tímea</td></tr>
-				<tr><td class="right">Alelnök&colon;&nbsp;</td><td>Huterják-Szűcs Dóra</td></tr>
-				<tr><td class="right">Titkár&colon;&nbsp;</td><td>Livia da Costa Alves</td></tr>
-				<tr><td class="right">Pénztáros&colon;&nbsp;</td><td>Somogyvári Kristóf</td></tr>
- 			</table>
-		</div>
-		<div class="center">
-			<h5>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSd47SNp3Oo64OXfRxPJXGgIG7s1KJFlty6qr7egm99-1ZyJDg/viewform?usp=sharing" target="_blank">Belépési nyilatkozat a MASZK-ba</a> <br>
-                <a href="media/egyesulet/statuten-maszk.pdf" target="_blank">Alapító okirat (Statuten) PDF-ben.</a>
-            </h5>
-		</div>
+        <div class="center"><h4>A MASZK-kal kapcsolatos kérdésekkel, ajánlatokkal keresse Szabó Tímeát <a href="mailto: maszk.ch@gmail.com" target="_blank">e-mailben.</a></h4></div>
+		
+	
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+   			<tr><th colspan="2">Jelenlétünk a közösségi médiában</th></tr>
+			<tr><td class="right">Facebook&colon;&nbsp;</td><td><a href="https://www.facebook.com/maszk.ch/" target="_blank">fb.com/maszk.ch</a></td></tr>
+			<tr><td class="right">Instagram&colon;&nbsp;</td><td><a href="https://www.instagram.com/maszk.ch/" target="_blank">instagram.com/maszk.ch</a></td></tr>
+			<tr><td class="right">TikTok&colon;&nbsp;</td><td><a href="https://www.tiktok.com/@maszk.ch" target="_blank">tiktok.com/&commat;maszk.ch</a></td></tr>
+			<tr><td class="right">Twitter&colon;&nbsp;</td><td><a href="https://twitter.com/maszk_ch" target="_blank">twitter.com/maszk_ch</a></td></tr>
+ 		</table>
+	</div>
+	
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+   			<tr><th colspan="2">Bankszámla adataink</th></tr>
+			<tr><td class="right">Kedvezményezett&colon;&nbsp;</td><td>MASZK</td></tr>
+			<tr><td class="right">IBAN&colon;&nbsp;</td><td>CH0680808007455441918</td></tr>
+			<tr><td class="right">SWIFT&colon;&nbsp;</td><td>RAIFCH22XXX</td></tr>
+			<tr><td class="right">Strasse/Nr.&colon;&nbsp;</td><td>Oechsli 10</td></tr>
+			<tr><td class="right">PLZ/Ort&colon;&nbsp;</td><td>8807 Freienbach</td></tr>
+ 		</table>
+	</div>
+	
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+   			<tr><th colspan="2">Elnökség</th></tr>
+    			<tr><td class="right">Elnök&colon;&nbsp;</td><td>Szabó Tímea</td></tr>
+			<tr><td class="right">Alelnök&colon;&nbsp;</td><td>Huterják-Szűcs Dóra</td></tr>
+			<tr><td class="right">Titkár&colon;&nbsp;</td><td>Livia da Costa Alves</td></tr>
+			<tr><td class="right">Pénztáros&colon;&nbsp;</td><td>Somogyvári Kristóf</td></tr>
+ 		</table>
+	</div>
+
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+    			<tr><td class="center"><a href="https://docs.google.com/forms/d/e/1FAIpQLSd47SNp3Oo64OXfRxPJXGgIG7s1KJFlty6qr7egm99-1ZyJDg/viewform?usp=sharing" target="_blank">Belépési nyilatkozat a MASZK-ba</a></td></tr>
+			<tr><td class="center"><a href="media/egyesulet/statuten-maszk.pdf" target="_blank">Alapító okirat (Statuten) PDF-ben.</a></td></tr>
+ 		</table>
+	</div>
     </section>
 
   <footer>
