--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="subtitle">
             <h2>Kapcsolat</h2>
         </div>
-        <div class="center"><h4>A MASZK-kal kapcsolatos kérdésekkel, ajánlatokkal keresse Szabó Tímeát <a href="mailto: maszk.ch@gmail.com" target="_blank">e-mailben.</a></h4></div>
+        <div class="center"><h4>A MASZK-kal kapcsolatos kérdésekkel, ajánlatokkal <br>keresse Szabó Tímeát <a href="mailto: maszk.ch@gmail.com" target="_blank">e-mailben.</a></h4></div>
 		
 	
 	<div class="center" style="overflow-x:auto;">
