--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
 
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
-    			<tr><td class="center"><a href="https://docs.google.com/forms/d/e/1FAIpQLSd47SNp3Oo64OXfRxPJXGgIG7s1KJFlty6qr7egm99-1ZyJDg/viewform?usp=sharing" target="_blank">Belépési nyilatkozat a MASZK-ba</a></td></tr>
-			<tr><td class="center"><a href="media/egyesulet/statuten-maszk.pdf" target="_blank">Alapító okirat (Statuten) PDF-ben.</a></td></tr>
+    			<tr><td class="center"><a href="https://docs.google.com/forms/d/e/1FAIpQLSd47SNp3Oo64OXfRxPJXGgIG7s1KJFlty6qr7egm99-1ZyJDg/viewform?usp=sharing" target="_blank">Belépési nyilatkozat</a></td></tr>
+			<tr><td class="center"><a href="media/egyesulet/statuten-maszk.pdf" target="_blank">Alapító okirat (Statuten)</a></td></tr>
  		</table>
 	</div>
     </section>
