--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <HTML lang="hu-HU">
 <HEAD>
+<META name="keywoords" content="MASZK">
 <META http-equiv="Content-Type" name="viewport" content="text/html; charset=UTF-8; width=device-width; initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
 <link rel="javascript" href="index.js">
