--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
 			<tr><td class="center"><a href="#kapcsolat">
-				<img alt="banki utalás" src="media/tamogatok/bank-qr.png" width="200px"/></a></td>
+				<img alt="banki utalás" src="media/tamogatok/bank-qr.png" width="200"/></a></td>
 			    <td class="center"><a href="https://pay.raisenow.io/phsrh" target="_blank">
-				<img alt="twintes támogatás" src="media/tamogatok/twint-qr.png" width="200px"/></a></td>
+				<img alt="twintes támogatás" src="media/tamogatok/twint-qr.png" width="200"/></a></td>
 			</tr>
 			<tr><td class="center"><a href="#kapcsolat">Banki utalás</a></td>
 			    <td class="center"><a href="https://pay.raisenow.io/phsrh" target="_blank">Twint</a></td></tr>
