--- a/index.html
+++ b/index.html
@@ -223,6 +223,28 @@
              		<li><a href="#kapcsolat">Kapcsolat</a></li>
  		 </ul>
 	</nav>
+	
+	<div class="center" style="overflow-x:auto;">
+		<table class="center">
+    			<tr><td class="center">
+				<a href="https://www.facebook.com/maszk.ch/" target="_blank">
+                   			<img src="media/contact/fb-gold.png" alt="facebook" id="fb">
+        			</a>
+			    </td>
+			    <td class="center">
+				<a href="https://www.instagram.com/maszk.ch/" target="_blank">
+                    			<img src="media/contact/ig-gold.png" alt="instagram" id="ig">
+                		</a>
+			    </td>
+			    <td class="center">
+				<a href="mailto:maszk.ch@gmail.com" target="_blank">
+                    			<img src="media/contact/email-gold.png" alt="email" id="email">
+                		</a>
+			    </td>
+			</tr>
+ 		</table>
+	</div>
+
 	<div class="center" style="overflow-x:auto;">
 		<table class="center">
     			<tr><td class="center"><a href="https://maszk.ch" target="_blank">Minden jog fenntartva &copy; 2023 | MASZK</a></td></tr>
@@ -230,17 +252,5 @@
  		</table>
 	</div>
     </footer>
-
-			<DIV class="column1c">
-				<a href="https://www.facebook.com/maszk.ch/" target="_blank">
-                    <img src="media/contact/fb-gold.png" alt="facebook" id="fb">
-                </a>
-                <a href="https://www.instagram.com/maszk.ch/" target="_blank">
-                    <img src="media/contact/ig-gold.png" alt="instagram" id="ig">
-                </a>
-                <a href="mailto:maszk.ch@gmail.com" target="_blank">
-                    <img src="media/contact/email-gold.png" alt="email" id="email">
-                </a>
-			</DIV>
 </body>
 </html>
